--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "second-brain",
+  "name": "second-brain-backend",
   "version": "1.0.0",
-  "description": "Personal knowledge management system - save and organize YouTube videos, Twitter posts, and documents",
+  "description": "Backend API for Second Brain - Personal knowledge management system",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "backend": "cd backend && npm run dev",
-    "frontend": "cd frontend && npm run dev",
-    "build": "npm run build-backend && npm run build-frontend",
-    "build-backend": "cd backend && npm run build",
-    "build-frontend": "cd frontend && npm run build",
-    "install-all": "npm run install-backend && npm run install-frontend",
-    "install-backend": "cd backend && npm install",
-    "install-frontend": "cd frontend && npm install",
-    "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
-    "start-backend": "cd backend && npm start",
-    "start-frontend": "cd frontend && npm run preview"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "postinstall": "npm run build"
   },
-  "keywords": ["react", "nodejs", "mongodb", "typescript", "knowledge-management"],
+  "keywords": ["nodejs", "express", "mongodb", "typescript", "api"],
   "author": "Your Name",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "mongodb": "^6.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1"
+  },
   "devDependencies": {
-    "concurrently": "^7.6.0"
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.10.5",
+    "typescript": "^5.3.3",
+    "ts-node-dev": "^2.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
