--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Backend API for Second Brain - Personal knowledge management system",
   "main": "dist/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "npm run build && npm start",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "postinstall": "npm run build"
+    "start": "node dist/server.js"
   },
   "keywords": ["nodejs", "express", "mongodb", "typescript", "api"],
   "author": "Your Name",
@@ -15,19 +15,18 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.5",
     "typescript": "^5.3.3",
-    "ts-node-dev": "^2.0.0"
+    "ts-node": "^10.9.1"
   },
   "engines": {
     "node": ">=16.0.0"
